{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 135,
  "lineage": "517ce342-841a-98f3-7f18-c785116c3304",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "103",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6a8d8fb6-128b-4e07-86e2-a66c0a4b6c2f/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/myvm-nsg/securityRules/test",
            "name": "test",
            "network_security_group_name": "myvm-nsg",
            "priority": 103,
            "protocol": "Tcp",
            "resource_group_name": "example-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.example",
            "module.linuxservers.azurerm_network_security_group.vm"
          ]
        },
        {
          "index_key": "104",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/6a8d8fb6-128b-4e07-86e2-a66c0a4b6c2f/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/myvm-nsg/securityRules/test1",
            "name": "test1",
            "network_security_group_name": "myvm-nsg",
            "priority": 104,
            "protocol": "tcp",
            "resource_group_name": "example-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.example",
            "module.linuxservers.azurerm_network_security_group.vm"
          ]
        }
      ]
    },
    {
      "module": "module.hub_network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6a8d8fb6-128b-4e07-86e2-a66c0a4b6c2f/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/hubnet/subnets/hub_subnet",
            "name": "hub_subnet",
            "resource_group_name": "example-resources",
            "virtual_network_name": "hubnet"
          },
          "dependencies": [
            "module.hub_network.data.azurerm_resource_group.network",
            "azurerm_resource_group.example",
            "module.hub_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.hub_network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7cba333a-1b68-439d-9d2d-78020ea0ba3d",
            "id": "/subscriptions/6a8d8fb6-128b-4e07-86e2-a66c0a4b6c2f/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/hubnet",
            "location": "westeurope",
            "name": "hubnet",
            "resource_group_name": "example-resources",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/6a8d8fb6-128b-4e07-86e2-a66c0a4b6c2f/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/hubnet/subnets/hub_subnet",
                "name": "hub_subnet"
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "module.hub_network.data.azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "linsimplevmips",
            "fqdn": "linsimplevmips.westeurope.cloudapp.azure.com",
            "id": "/subscriptions/6a8d8fb6-128b-4e07-86e2-a66c0a4b6c2f/resourceGroups/example-resources/providers/Microsoft.Network/publicIPAddresses/myvm-pip-0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.126.37.115",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "myvm-pip-0",
            "resource_group_name": "example-resources",
            "sku": "Basic",
            "tags": {
              "source": "terraform"
            }
          }
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6a8d8fb6-128b-4e07-86e2-a66c0a4b6c2f/resourceGroups/example-resources/providers/Microsoft.Network/networkInterfaces/myvm-nic-0",
            "internal_domain_name_suffix": "hiz1u5didoouhhjnpaba3if0hf.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myvm-ip-0",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6a8d8fb6-128b-4e07-86e2-a66c0a4b6c2f/resourceGroups/example-resources/providers/Microsoft.Network/publicIPAddresses/myvm-pip-0",
                "subnet_id": "/subscriptions/6a8d8fb6-128b-4e07-86e2-a66c0a4b6c2f/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/hubnet/subnets/hub_subnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-3A-5F-97",
            "name": "myvm-nic-0",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "example-resources",
            "tags": {
              "source": "terraform"
            },
            "virtual_machine_id": "/subscriptions/6a8d8fb6-128b-4e07-86e2-a66c0a4b6c2f/resourceGroups/example-resources/providers/Microsoft.Compute/virtualMachines/myvm-vmLinux-0"
          },
          "dependencies": [
            "module.hub_network.azurerm_virtual_network.vnet",
            "module.hub_network.data.azurerm_resource_group.network",
            "module.linuxservers.azurerm_public_ip.vm",
            "module.linuxservers.data.azurerm_resource_group.vm",
            "azurerm_resource_group.example",
            "module.hub_network.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a8d8fb6-128b-4e07-86e2-a66c0a4b6c2f/resourceGroups/example-resources/providers/Microsoft.Network/networkInterfaces/myvm-nic-0|/subscriptions/6a8d8fb6-128b-4e07-86e2-a66c0a4b6c2f/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/myvm-nsg",
            "network_interface_id": "/subscriptions/6a8d8fb6-128b-4e07-86e2-a66c0a4b6c2f/resourceGroups/example-resources/providers/Microsoft.Network/networkInterfaces/myvm-nic-0",
            "network_security_group_id": "/subscriptions/6a8d8fb6-128b-4e07-86e2-a66c0a4b6c2f/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/myvm-nsg"
          },
          "dependencies": [
            "module.linuxservers.data.azurerm_resource_group.vm",
            "azurerm_resource_group.example",
            "module.hub_network.azurerm_subnet.subnet",
            "module.hub_network.azurerm_virtual_network.vnet",
            "module.hub_network.data.azurerm_resource_group.network",
            "module.linuxservers.azurerm_network_interface.vm",
            "module.linuxservers.azurerm_network_security_group.vm",
            "module.linuxservers.azurerm_public_ip.vm"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a8d8fb6-128b-4e07-86e2-a66c0a4b6c2f/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/myvm-nsg",
            "location": "westeurope",
            "name": "myvm-nsg",
            "resource_group_name": "example-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test",
                "priority": 103,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "source": "terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.example",
            "module.linuxservers.data.azurerm_resource_group.vm"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "domain_name_label": "linsimplevmips",
            "fqdn": "linsimplevmips.westeurope.cloudapp.azure.com",
            "id": "/subscriptions/6a8d8fb6-128b-4e07-86e2-a66c0a4b6c2f/resourceGroups/example-resources/providers/Microsoft.Network/publicIPAddresses/myvm-pip-0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.126.37.115",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "myvm-pip-0",
            "resource_group_name": "example-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "source": "terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "module.linuxservers.data.azurerm_resource_group.vm"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.2.0.0/24",
            "address_prefixes": [
              "10.2.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6a8d8fb6-128b-4e07-86e2-a66c0a4b6c2f/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/spokenet/subnets/spoke_subnet",
            "name": "spoke_subnet",
            "resource_group_name": "example-resources",
            "virtual_network_name": "spokenet"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "module.spoke_network.azurerm_virtual_network.vnet",
            "module.spoke_network.data.azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "92ffb774-935c-464c-9cb0-7fbb11ab2bff",
            "id": "/subscriptions/6a8d8fb6-128b-4e07-86e2-a66c0a4b6c2f/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/spokenet",
            "location": "westeurope",
            "name": "spokenet",
            "resource_group_name": "example-resources",
            "subnet": [
              {
                "address_prefix": "10.2.0.0/24",
                "id": "/subscriptions/6a8d8fb6-128b-4e07-86e2-a66c0a4b6c2f/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/spokenet/subnets/spoke_subnet",
                "name": "spoke_subnet"
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "module.spoke_network.data.azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "module": "module.windowsservers",
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "winsimplevmips1",
            "fqdn": "winsimplevmips1.westeurope.cloudapp.azure.com",
            "id": "/subscriptions/6a8d8fb6-128b-4e07-86e2-a66c0a4b6c2f/resourceGroups/example-resources/providers/Microsoft.Network/publicIPAddresses/mywinvm-pip-0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.126.70.73",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "mywinvm-pip-0",
            "resource_group_name": "example-resources",
            "sku": "Basic",
            "tags": {
              "source": "terraform"
            }
          }
        }
      ]
    },
    {
      "module": "module.windowsservers",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6a8d8fb6-128b-4e07-86e2-a66c0a4b6c2f/resourceGroups/example-resources/providers/Microsoft.Network/networkInterfaces/mywinvm-nic-0",
            "internal_domain_name_suffix": "os155es2sngenhfqp43rdkzl5h.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "mywinvm-ip-0",
                "primary": true,
                "private_ip_address": "10.2.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6a8d8fb6-128b-4e07-86e2-a66c0a4b6c2f/resourceGroups/example-resources/providers/Microsoft.Network/publicIPAddresses/mywinvm-pip-0",
                "subnet_id": "/subscriptions/6a8d8fb6-128b-4e07-86e2-a66c0a4b6c2f/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/spokenet/subnets/spoke_subnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-43-C3-44",
            "name": "mywinvm-nic-0",
            "private_ip_address": "10.2.0.4",
            "private_ip_addresses": [
              "10.2.0.4"
            ],
            "resource_group_name": "example-resources",
            "tags": {
              "source": "terraform"
            },
            "virtual_machine_id": "/subscriptions/6a8d8fb6-128b-4e07-86e2-a66c0a4b6c2f/resourceGroups/example-resources/providers/Microsoft.Compute/virtualMachines/mywinvm-vmWindows-0"
          },
          "dependencies": [
            "module.windowsservers.data.azurerm_resource_group.vm",
            "azurerm_resource_group.example",
            "module.spoke_network.azurerm_subnet.subnet",
            "module.spoke_network.azurerm_virtual_network.vnet",
            "module.spoke_network.data.azurerm_resource_group.network",
            "module.windowsservers.azurerm_public_ip.vm"
          ]
        }
      ]
    },
    {
      "module": "module.windowsservers",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a8d8fb6-128b-4e07-86e2-a66c0a4b6c2f/resourceGroups/example-resources/providers/Microsoft.Network/networkInterfaces/mywinvm-nic-0|/subscriptions/6a8d8fb6-128b-4e07-86e2-a66c0a4b6c2f/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/mywinvm-nsg",
            "network_interface_id": "/subscriptions/6a8d8fb6-128b-4e07-86e2-a66c0a4b6c2f/resourceGroups/example-resources/providers/Microsoft.Network/networkInterfaces/mywinvm-nic-0",
            "network_security_group_id": "/subscriptions/6a8d8fb6-128b-4e07-86e2-a66c0a4b6c2f/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/mywinvm-nsg"
          },
          "dependencies": [
            "module.windowsservers.azurerm_public_ip.vm",
            "module.windowsservers.data.azurerm_resource_group.vm",
            "azurerm_resource_group.example",
            "module.spoke_network.azurerm_subnet.subnet",
            "module.spoke_network.azurerm_virtual_network.vnet",
            "module.spoke_network.data.azurerm_resource_group.network",
            "module.windowsservers.azurerm_network_interface.vm",
            "module.windowsservers.azurerm_network_security_group.vm"
          ]
        }
      ]
    },
    {
      "module": "module.windowsservers",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a8d8fb6-128b-4e07-86e2-a66c0a4b6c2f/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/mywinvm-nsg",
            "location": "westeurope",
            "name": "mywinvm-nsg",
            "resource_group_name": "example-resources",
            "security_rule": [],
            "tags": {
              "source": "terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.example",
            "module.windowsservers.data.azurerm_resource_group.vm"
          ]
        }
      ]
    },
    {
      "module": "module.windowsservers",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "domain_name_label": "winsimplevmips1",
            "fqdn": "winsimplevmips1.westeurope.cloudapp.azure.com",
            "id": "/subscriptions/6a8d8fb6-128b-4e07-86e2-a66c0a4b6c2f/resourceGroups/example-resources/providers/Microsoft.Network/publicIPAddresses/mywinvm-pip-0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.126.70.73",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "mywinvm-pip-0",
            "resource_group_name": "example-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "source": "terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "module.windowsservers.data.azurerm_resource_group.vm"
          ]
        }
      ]
    }
  ]
}